--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    
+    <!-- Title -->
+    <title>Netflix - Watch TV Shows Online, Watch Movies Online</title>
+
+    <!-- Theme color for browser -->
+    <meta name="theme-color" content="#141414" />
+
+    <!-- Description for SEO -->
+    <meta name="description" content="Watch Netflix movies and TV shows online or stream right to your smart TV, game console, PC, Mac, mobile, tablet and more." />
+
+    <!-- Apple -->
+    <link rel="apple-touch-icon" href="/favicon.svg" />
   </head>
   <body>
     <div id="root"></div>
