--- a/index.html
+++ b/index.html
@@ -2,9 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+
+    <!-- Responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <!-- SEO Title -->
+    <title>Hackathon Netflix - Reimagined Streaming Experience</title>
+
+    <!-- Meta Description -->
+    <meta name="description" content="Experience Netflix like never before! Mood-based themes, random picks, and smarter recommendations. Built for Level Up Vibe Hackathon 2025." />
+
+    <!-- Open Graph for Social Sharing -->
+    <meta property="og:title" content="Hackathon Netflix - Reimagined Streaming" />
+    <meta property="og:description" content="Smarter, mood-based Netflix experience built for Hackathon 2025." />
+    <meta property="og:image" content="/preview.png" />
+    <meta property="og:url" content="https://hackthonnetflix.vercel.app/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Hackathon Netflix - Reimagined Streaming" />
+    <meta name="twitter:description" content="Smarter, mood-based Netflix experience built for Hackathon 2025." />
+    <meta name="twitter:image" content="/preview.png" />
   </head>
   <body>
     <div id="root"></div>
