--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO Title -->
-    <title>Hackathon Netflix - Reimagined Streaming Experience</title>
+    <title>Hackathon Netflix</title>
 
     <!-- Meta Description -->
     <meta name="description" content="Experience Netflix like never before! Mood-based themes, random picks, and smarter recommendations. Built for Level Up Vibe Hackathon 2025." />
